--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "next": "^9.5.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-number-format": "^4.4.1",
-    "react-text-mask": "^5.4.3"
+    "react-number-format": "^4.4.1"
   },
   "devDependencies": {
     "jest": "^26.4.2"
